syntax = "proto3";
package oprc;

service DataService {
    rpc Get (SingleKeyRequest) returns (ValueResponse);
    rpc Delete (SingleKeyRequest) returns (EmptyResponse);
    rpc Set (SetRequest) returns (EmptyResponse);
}
message EmptyResponse {

}

message ValueResponse {
    
    bytes value = 5;
}

message SingleKeyRequest {
    string cls_id = 1;
    int32 partition_id = 2;
    uint64 object_id = 3;
    string key = 4;
  }

  
message SetRequest {
    string cls_id = 1;
    int32 partition_id = 2;
    uint64 object_id = 3;
    string key = 4;
    bytes value = 5;
  }